traces/bug_131.txt
src/medit/vector.c:122: error: DEAD_STORE
  The value written to &clip (type clip*) is never used.
Showing all 1 steps of the trace


src/medit/vector.c:122:3: Write of unused value
120.   
121.     sc   = cv.scene[currentScene()];
122.     clip = sc->clip;
         ^
123.     if ( egal(sc->iso.val[0],sc->iso.val[MAXISO-1]) )  return(0);
124.   
